--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~5.0",
         "phpspec/phpspec": "~2.1",
-        "laracasts/generators": "~1.1",
-        "potsky/laravel-localization-helpers" : "~1.1"
+        "potsky/laravel-localization-helpers" : "~1.1",
+		"laralib/l5scaffold": "^1.0"
 	},
 	"autoload": {
 		"classmap": [
